test_regress/t/t_class_unsup_bad.out
%Error: t/t_class_unsup_bad.v:7:1: Unsupported: virtual interface
    7 | virtual interface vi_t vi;
      | ^~~~~~~
%Error: t/t_class_unsup_bad.v:8:1: Unsupported: virtual data type
    8 | virtual vi_t vi2;
      | ^~~~~~~
%Error: t/t_class_unsup_bad.v:13:1: Unsupported: classes
   13 | class C #(parameter P=1);
      | ^~~~~
%Error: t/t_class_unsup_bad.v:14:26: Unsupported: class parameters
   14 |    localparam LOCPAR = 10;
      |                          ^
%Error: t/t_class_unsup_bad.v:25:4: Unsupported: virtual class member qualifier
   25 |    virtual function void func_virtual; endfunction
      |    ^~~~~~~
%Error: t/t_class_unsup_bad.v:26:4: Unsupported: pure virtual class method
   26 |    pure virtual function void func_pure_virtual; endfunction
      |    ^~~~
%Error: t/t_class_unsup_bad.v:26:50: syntax error, unexpected endfunction
   26 |    pure virtual function void func_pure_virtual; endfunction
      |                                                  ^~~~~~~~~~~
%Error: t/t_class_unsup_bad.v:32:1: Unsupported: virtual classes
   32 | virtual class VC;
      | ^~~~~~~
%Error: t/t_class_unsup_bad.v:32:9: Unsupported: classes
   32 | virtual class VC;
      |         ^~~~~
%Error: Exiting due to
